# bbb-gdpr-authenticator

./: COPYRIGHT  Cargo.toml  README.md  gdpr-authenticator.service  gdpr-check.nginx  greenlight.nginx  nginx.conf
debian/: postinst  prerm
src/: index.html  main.rs  setcookie.js
