[package]
name = "gdpr-authenticator"
version = "0.1.5"
authors = ["Johannes <johannes.barthel@student.kit.edu>"]
edition = "2018"
description = "Consent wall for Senfcall privacy policy"
license = "MIT OR Apache-2.0"

[dependencies]
warp = "0.2.4"
tokio = {features = ["macros"], version = "0.2.22"}

[package.metadata.deb]
maintainer = "Johannes <johannes.barthel@student.kit.edu>"
copyright = "2020 Computerwerk Darmstadt e.V. <vorstand@computerwerk.org>"
license-file = ["COPYRIGHT", "0"]
depends = "$auto, systemd, nginx"
extended-description = """\
Consent wall for our Senfcall privacy policy. Implemented to interface with the
nginx_auth plugin"""
section = "httpd"
priority = "optional"
assets = [
    ["gdpr-check.nginx", "etc/bigbluebutton/nginx/", "644"],
    ["gdpr-authenticator.service", "/lib/systemd/system/", "644"],
    ["target/release/gdpr-authenticator", "usr/bin/", "755"]
]
maintainer-scripts = "debian"
